--- a/.babelrc
+++ b/.babelrc
@@ -2,6 +2,7 @@
   "presets": ["es2015", "stage-2"],
   "comments": false,
   "plugins": [
+    "transform-runtime",
     ["transform-react-jsx", {"pragma": "element"}]
   ]
 }
