--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@f/foreach-obj": "^1.1.1",
     "@f/handle-actions": "^1.1.1",
     "@f/omit": "^2.2.3",
+    "babel-plugin-transform-runtime": "^6.8.0",
     "vdux-ui": "^1.2.0"
   },
   "devDependencies": {
