--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@f/create-action": "^1.1.1",
     "@f/foreach-obj": "^1.1.1",
     "@f/handle-actions": "^1.1.1",
+    "@f/map-values": "^1.0.0",
     "@f/omit": "^2.2.3",
     "babel-plugin-transform-runtime": "^6.8.0",
     "vdux-ui": "^1.2.0"
