--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "@f/create-action": "^1.1.1",
     "@f/foreach-obj": "^1.1.1",
     "@f/handle-actions": "^1.1.1",
+    "@f/identity": "^1.1.1",
     "@f/map-values": "^1.0.0",
+    "@f/noop": "^1.2.0",
     "@f/omit": "^2.2.3",
+    "@f/serialize-form": "^1.0.0",
     "babel-plugin-transform-runtime": "^6.8.0",
     "vdux-ui": "^1.2.0"
   },
