--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@f/noop": "^1.2.0",
     "@f/omit": "^2.2.3",
     "@f/serialize-form": "^1.0.0",
+    "autosize": "^3.0.15",
     "babel-plugin-transform-runtime": "^6.8.0",
+    "vdux": "^2.4.6",
     "vdux-ui": "^1.2.0"
   },
   "devDependencies": {
