add missing dep on @f/debounce

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@f/combine-reducers": "^1.2.1",
     "@f/create-action": "^1.1.1",
+    "@f/debounce": "^1.0.4",
     "@f/equal": "^1.0.1",
     "@f/foreach-obj": "^1.1.1",
     "@f/handle-actions": "^1.1.1",
