--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@f/noop": "^1.2.0",
     "@f/omit": "^2.2.3",
     "@f/serialize-form": "^1.0.0",
-    "vdux-ui": "^1.3.2"
+    "vdux-ui": "^1.3.3"
   },
   "devDependencies": {
     "@f/trigger-event": "^1.0.2",
@@ -36,7 +36,6 @@
     "hihat": "^2.6.4",
     "tap-dev-tool": "^1.3.0",
     "tape": "^4.2.0",
-    "vdux": "^2.4.9",
-    "vdux-ui": "^1.1.0"
+    "vdux": "^2.4.9"
   }
 }
